Filled out new iopoint prototype including icons/sprites with proper orientation and english localizations.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,11 @@
 [entity-name]
 circuitissimo-processor=Processor
+circuitissimo-processor-tagged=Modified Processor
+circuitissimo-iopoint=I/O Point
+circuitissimo-iopoint-tagged=Modified I/O Point
 
 [item-name]
 circuitissimo-processor=Processor
+circuitissimo-processor-tagged=Modified Processor
+circuitissimo-iopoint=I/O Point
+circuitissimo-iopoint-tagged=Modified I/O Point
