Consolidated most anchor rendering and search code.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,3 +1,5 @@
+circuitissimo-iopoint-built-error=[img=utility/warning_icon] [entity=circuitissimo-iopoint] must be placed at a [entity=circuitissimo-processor] anchor point.
+
 [entity-name]
 circuitissimo-processor=Processor
 circuitissimo-processor-tagged=Modified Processor
