Fixed bugs with iopoint placement.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,4 +1,5 @@
-circuitissimo-iopoint-built-error=[img=utility/warning_icon] [entity=circuitissimo-iopoint] must be placed at a [entity=circuitissimo-processor] anchor point.
+circuitissimo-iopoint-placement-error=[img=utility/warning_icon] [entity=circuitissimo-iopoint] must be placed at a connected [entity=circuitissimo-processor] anchor point.
+circuitissimo-iopoint-exists-error=[img=utility/warning_icon] [entity=circuitissimo-iopoint] must be placed at an empty [entity=circuitissimo-processor] anchor point.
 
 [entity-name]
 circuitissimo-processor=Processor
